task-tracker-devops/backend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: my-app
spec:
  selector:
    app: backend
  ports:
    - port: 3001
      targetPort: 8000
      nodePort: 32001   
  type: NodePort
